# lazy-bytes-cast

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.ps1  index.html  ~.git-credentials
.github/workflows/: rust.yml
ci/: upload_pages.sh  upload_rust_crate.sh
doc/: search-index.js
doc/implementors/lazy_bytes_cast/: trait.FromBytesCast.js
doc/lazy_bytes_cast/: fn.bytes_cast.html  fn.bytes_cast_lazy.html  fn.to_bytes.html  index.html  sidebar-items.js  trait.FromBytesCast.html  trait.ToBytesCast.html
doc/src/lazy_bytes_cast/src/: lib.rs.html
src/: array.rs  bits.rs  byte_index.rs  convert.rs  from.rs  from_bytes.rs  lib.rs  read.rs  slice.rs  to.rs  to_bytes.rs
tests/: cast.rs  convert.rs  read.rs  slice.rs  tests.rs
