[package]
name = "lazy-bytes-cast"
version = "2.0.0"
authors = ["Douman <douman@gmx.se>"]
description = "Lazy casts from & to byte arrays"
repository = "https://github.com/DoumanAsh/lazy-bytes-cast"
documentation = "https://docs.rs/crate/lazy-bytes-cast/"
license = "MIT"

[dependencies]

[features]
default = ["std"]
std = []
